refactor: вынести класс main в другой пакет, в классе  InMemoryTaskManager переменовать метод возвращающий списк истории просмотра задач, добавить модификатор final и private там где надо. В классе менеджера историй добавить переменную константу и соотвественно скорректировать условие где используется констатнта, использовать реализацию linkedlist и добавить проверку на null.